--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 </video>
 <button>Play/Pause</button>
 </main>
-<script src="/assets/index.js"></script>
+<script type="module" src="assets/index.js"></script>
 </body>
 </html>
