--- a/exercises/call-apply-bind.html
+++ b/exercises/call-apply-bind.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <a href="/ejercicios/">Go back</a>
+    <a href="/exercises/">Go back</a>
     <p><em>Abre la consola</em></p>
 
     <ul>
