--- a/website/ejercicios/abort-fetch.html
+++ b/website/ejercicios/abort-fetch.html
@@ -4,7 +4,7 @@
   </head>
 
   <body>
-    <a href="/exercises/">Go back</a>
+    <a href="/ejercicios/">Go back</a>
     <p><em>Abre la consola</em></p>
 
     <img id="huge-image" height="400" />
