--- a/website/ejercicios/proxy.html
+++ b/website/ejercicios/proxy.html
@@ -4,7 +4,7 @@
   </head>
 
   <body>
-    <a href="/exercises/">Go back</a>
+    <a href="/ejercicios/">Go back</a>
     <p><em>Abre la consola</em></p>
 
     <script src="https://unpkg.com/fast-levenshtein@2.0.6/levenshtein.js"></script>
